--- a/src/todo.css
+++ b/src/todo.css
@@ -1,4 +1,4 @@
-#appDiv {
+#cli-box {
     position: fixed;
     top: 0;
     left: 0;
@@ -7,29 +7,57 @@
     background: blue;
 }
 
-#outputDiv, #commandDiv {
+#cli-output-wrapper, #container2, #cli-input-wrapper {
     position: absolute;
-    width: 96%;
-    left: 2%;
-    right: 98%;
+    width: 100%;
 }
 
-#outputDiv {
-    top: 8px;
-    bottom: 35px;
+#cli-output-wrapper {
+    top: 0;
+    bottom: 30px;
 }
 
-#commandDiv {
-    bottom: 8px;
-    height: 16px;
+#container2 {
+    visibility:hidden;
+    top: 51%;
+    bottom: 21px;
 }
 
-#output, #command {
+#cli-input-wrapper {
+    bottom: 0px;
+    height: 20px;
+}
+
+#cli-output {
+    overflow: auto;
+    padding: 5px;
+    height: 100%;
+
+    font-family: Courier New, monospace;
+    font-size: .8em;
+    color: white;
+}
+
+#scroll-padding {
+    height: 101%;
+}
+
+#outputDiv, #commandDiv {
+    height:100%;
+    width: 100%;
+    padding: 0px;
+}
+
+#output, #cli-input {
+    margin: 0;
+    border: 0;
+    padding: 0;
+
     width: 100%;
     height: 100%;
 }
 
 #usage, #shorthelp, #help {
-    position: fixed;  // suppress scroll bars
+    position: fixed;  /* suppress scroll bars */
 }
 
