Change background color to black

--- a/src/todo.css
+++ b/src/todo.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: blue;
+    background: black;
 }
 
 #cli-output-wrapper, #cli-input-wrapper {
