Improve font in IE.

--- a/src/todo.css
+++ b/src/todo.css
@@ -17,7 +17,7 @@
     background-color: #222;
     color: #fff;
     font-size: 14px;
-    font-family: DejaVu Sans Mono, monospace;
+    font-family: Consolas, Courier New, DejaVu Sans Mono, monospace;
   }
 
   #container {
