Apply Solarized dark color scheme accent tones.

--- a/src/todo.css
+++ b/src/todo.css
@@ -8,6 +8,16 @@ base0     #839496  text, primary
 base1     #93a1a1  emphasis
 base2     #eee8d5
 base3     #fdf6e3
+
+yellow    #b58900
+orange    #cb4b16
+red       #dc322f
+magenta   #d33682
+violet    #6c71c4
+blue      #268bd2
+cyan      #2aa198
+green     #859900
+
 */
 
   a {
@@ -82,18 +92,18 @@ base3     #fdf6e3
     word-wrap: break-word;
   }
 
-  .s_special { color: #4ff }
+  .s_special { color: #2aa198 }
 
-  .s_number { color: #ff4 }
+  .s_number { color: #b58900 }
 
-  .s_boolean { color: #ff4 }
+  .s_boolean { color: #b58900 }
 
-  .s_undefined { color: #999 }
+  .s_undefined { font-style: italic }
 
   .s_null { font-weight: bold }
 
-  .s_string { color: #4f4 }
+  .s_string { color: #859900 }
 
-  .s_date { color: #f4f }
+  .s_date { color: #859900 }
 
-  .s_regexp { color: #f44 }
+  .s_regexp { color: #dc322f }
